review changes: clarify command, re-add `del` & remove the remove from `set`, remove implicit list argument, use #emptyList where possible